--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -48,6 +48,20 @@ table {
 .App {
   box-sizing: border-box;
   display: flex;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   height: 100vh;
+}
+
+.diamond-logo {
+	position: fixed;
+	bottom: 15px;
+	left: 17px;
+	height: 75px;
+	opacity: .4;
+	
+}
+
+.diamond-logo:hover {
+	opacity: 1;
+	cursor: none;
 }
