--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,3 +1,7 @@
+.home-wrapper {
+    display: flex;
+    background-image: url(https://releases.rancher.com/dashboard/latest/shell/assets/images/pl/login-landscape.svg);
+}
 .home {
     box-sizing: border-box;
     border: 1px solid green;
