--- a/client/src/styles/Config.css
+++ b/client/src/styles/Config.css
@@ -1,10 +1,10 @@
 .config-wrapper {
     display: flex;
+    background-image: url(https://releases.rancher.com/dashboard/latest/shell/assets/images/pl/login-landscape.svg);
 }
 .config {
     box-sizing: border-box;
-    border: 1px solid green;
-    width: calc(100vw - 350px);
+    width: calc(100vw - 200px);
 }
 
 .config-title {
@@ -13,6 +13,5 @@
 }
 
 section {
-    border: 1px solid blue;
     padding: 10px;
 }
