--- a/client/src/styles/Create.css
+++ b/client/src/styles/Create.css
@@ -1,10 +1,10 @@
 .create-wrapper {
     display: flex;
+    background-image: url(https://releases.rancher.com/dashboard/latest/shell/assets/images/pl/login-landscape.svg);
 }
 .create {
     box-sizing: border-box;
-    border: 1px solid green;
-    width: calc(100vw - 350px);
+    width: calc(100vw - 200px);
 }
 
 .create-title {
