--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -49,6 +49,7 @@ table {
   box-sizing: border-box;
   display: flex;
   height: 100vh;
+  font-family: "Lato",arial,helvetica,sans-serif;
 }
 
 .diamond-logo {
@@ -63,4 +64,12 @@ table {
 .diamond-logo:hover {
 	opacity: 1;
 	cursor: none;
+}
+
+.unselectable {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
