--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,6 +1,7 @@
 .home-wrapper {
     display: flex;
     background-image: url(https://releases.rancher.com/dashboard/latest/shell/assets/images/pl/login-landscape.svg);
+    overflow-x: hidden;
 }
 .home {
     box-sizing: border-box;
@@ -28,12 +29,4 @@
     height: 400px;
     bottom: 300px;
     left: 300px;
-}
-
-.welcome {
-    font-size: 3rem;
-}
-
-.rt {
-    font-size: 5rem
 }
