--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -50,6 +50,8 @@ table {
   display: flex;
   height: 100vh;
   font-family: "Lato",arial,helvetica,sans-serif;
+  letter-spacing: 1.8px;
+  color: #59595B;
 }
 
 .diamond-logo {
