hackweek-day4-config-details

--- a/client/src/styles/Createdby.css
+++ b/client/src/styles/Createdby.css
@@ -27,7 +27,9 @@
     color: #e6e6e6;
     /* border: 2px solid #515E66; */
     /* border: 2px solid #0175A8; */
-    border: 2px solid white;
+    /* border: 2px solid #59595B; */
+    border: 2px solid #515E66;
+    /* border: 2px solid white; */
     height: 400px;
 }
 
