--- a/client/src/styles/Createdby.css
+++ b/client/src/styles/Createdby.css
@@ -44,3 +44,11 @@
     max-width: 100%;
     margin-bottom: 2.1%;
 }
+
+.unselectable {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
