--- a/client/src/styles/K8sversion.css
+++ b/client/src/styles/K8sversion.css
@@ -17,6 +17,10 @@
 
 .k8s-container:hover {
     color: #fff;
-    background-color: #0175A8;
+    /* background-color: #8CC43F; */
+    background-color: rgba(140,196,63, 0.8);
+    /* background-color: #BAD546; */
+    /* background-color: #BFE1E4; */
+    /* background-color: #0175A8; */
     cursor: pointer;
 }
