--- a/client/src/styles/K8sversion.css
+++ b/client/src/styles/K8sversion.css
@@ -18,9 +18,10 @@
 .k8s-container:hover {
     color: #fff;
     /* background-color: #8CC43F; */
-    background-color: rgba(140,196,63, 0.8);
+    /* background-color: rgba(140,196,63, 0.8); */
     /* background-color: #BAD546; */
     /* background-color: #BFE1E4; */
     /* background-color: #0175A8; */
+    background-color: rgba(66,81,96, .8);
     cursor: pointer;
 }
