--- a/client/src/styles/Module.css
+++ b/client/src/styles/Module.css
@@ -33,7 +33,7 @@
     /* border: 1px solid red; */
     width: 50vw;
     height: 170px;
-    justify-content: space-evenly;
+    justify-content: space-between;
     /* background-color: rgba(0,0,0,.9); */
      /* background-color: rgba(1,117,168,.8); */
      /* background-color: rgba(109,167,57,.9); */
@@ -44,7 +44,6 @@
     background-size: 35vw;
     /* border: 1px solid red; */
     background-position: center;
-    opacity: .9;
     /* background-repeat: no-repeat; */
     
 }
@@ -52,11 +51,22 @@
 .spec {
     display: flex;
     padding: 0 2vw;
+    /* border: 1px solid green; */
+    justify-content: space-between;
+    margin: 0 6vh;
 }
-
+.spec-wrapper {
+    /* border: 1px solid red; */
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
 .spec-title {
     margin: 0 auto;
     font-weight: bold;
+    padding: 15px;
+    /* border: 1px solid blue; */
 }
 
 .value {
